--- a/configuration/i18n/pt/i18n.json
+++ b/configuration/i18n/pt/i18n.json
@@ -4,7 +4,7 @@
     "description": "Bem-vindo ao Bot",
     "short_description": "Faz coisas incríveis"
   },
-  "commands_descriptions": {
+  "command_descriptions": {
     "start": "▶️ Iniciar Bot"
   },
   "menus": {
