--- a/configuration/i18n/en/i18n.json
+++ b/configuration/i18n/en/i18n.json
@@ -6,7 +6,7 @@
   },
   "command_descriptions": {
     "start": "▶️ Start Bot",
-    "hello": "Hello world"
+    "hello": "\uD83D\uDC4B Hello world"
   },
   "shared": {
     "buttons": {
