feat: update i18n setup

--- a/configuration/i18n/ru/i18n.json
+++ b/configuration/i18n/ru/i18n.json
@@ -21,7 +21,10 @@
       }
     },
     "hello": {
-      "message": "Привет"
+      "message": "Привет, вхожу в сцену",
+      "scene": {
+        "first_message": "Привет, первый шаг"
+      }
     }
   }
 }
