feat: add ton service basic functionality

--- a/configuration/i18n/en/i18n.json
+++ b/configuration/i18n/en/i18n.json
@@ -9,7 +9,8 @@
     "help": "\uD83D\uDE4B Help",
     "hello": "\uD83D\uDC4B Hello world",
     "quiz": "\uD83E\uDDE0 test your skills \uD83D\uDE0F",
-    "quiz_manager": "\uD83D\uDEE0\uFE0F Manage Quizzes"
+    "quiz_manager": "\uD83D\uDEE0\uFE0F Manage Quizzes",
+    "ton_balance": "TON balance"
   },
   "shared": {
     "buttons": {
